--- a/css/materialight.scss
+++ b/css/materialight.scss
@@ -2,9 +2,9 @@
 
 // Base document colors
 
-$navbar-bg: #7869c1;
+$navbar-bg: #782323;
 $sidebar-bg: white;
-$footer-bg: #7869c1;
+$footer-bg: #80c4e6;
 
 // Center h1 titles 
 .centered h1 {
