--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 /* Change the page background */
 body {
-  background-color: #f4f8f4; /* light grey, change to any color */
+  background-color: #ffffff; /* light grey, change to any color */
 }
 
 /*  Center h1 titles */
